--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,19 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@apollo/client": "^3.3.7",
+    "@stripe/stripe-js": "^1.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "graphql": "^14.6.0",
+    "jwt-decode": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-router-dom": "^6.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
