added DevDependency concurrently

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  },
   "bugs": {
     "url": "https://github.com/gulogulo208/sojourner/issues"
   },
