--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.3.0",
     "jwt-decode": "^2.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
