--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
+    "openai": "^3.1.0",
     "stripe": "^8.67.0"
   },
   "devDependencies": {
