--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@mui/x-date-pickers": "^5.0.16",
     "@stripe/stripe-js": "^1.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "graphql": "^16.3.0",
     "jwt-decode": "^2.2.0",
     "react": "^18.2.0",
