--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@material-tailwind/react": "^1.2.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "@stripe/stripe-js": "^1.3.1",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
