--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/gulogulo208/sojourner#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "firebase": "^9.23.0",
     "mongodb": "^5.7.0"
   }
